chart ver1